# FileCompressionHuffman

./: CMakeLists.txt  README.md  readme-md.md  roadmap
include/: HuffmanCoding.h  HuffmanNode.h
src/: HuffmanCoding.cpp  HuffmanNode.cpp  main.cpp
